src/main/java/com/example/for_angular_project/error/SliderNotFoundException.java
package com.example.for_angular_project.error;

public class SliderNotFoundException extends Exception {

   public SliderNotFoundException() {
   }

   public SliderNotFoundException(String arg0) {
      super(arg0);
   }

   public SliderNotFoundException(Throwable arg0) {
      super(arg0);
   }

   public SliderNotFoundException(String arg0, Throwable arg1) {
      super(arg0, arg1);
   }

   public SliderNotFoundException(String arg0, Throwable arg1, boolean arg2, boolean arg3) {
      super(arg0, arg1, arg2, arg3);
   }

}
